--- a/juego.html
+++ b/juego.html
@@ -64,7 +64,7 @@
             $("#pokemons").append('<div class="col-xs-4 col-md-4" ><a href="#" class="thumbnail"><img src="img/'+val+'.png" id='+val+' draggable="true" ondragstart="drag(event)" style="cursor:move; height: 40vh; width:20vw;" /></a></div>');
                
         });
-        $("#DragPokemons").append('<img src="img/'+item+'.jpg"><a href="#" class="thumbnail"></a><h3><span class="label label-danger">'+item+"</span></h3><br/>");
+        $("#DragPokemons").append('<img src="img/'+item+'.jpg" style="heigth: 800px; width= 400px;"><a href="#" class="thumbnail"></a><h3><span class="label label-danger">'+item+"</span></h3><br/>");
         }
 function allowDrop(ev){
 	 ev.preventDefault();
