--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <input type="text" id="password" />
             
             <input type="button" onclick="guardarDatos()" value="Guardar datos" />
-            
+            <a href="final.html">creditos</a>
           </div>
       </p>
  <script>
