--- a/felicidades.html
+++ b/felicidades.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="js/canvas.js"></script>
+    <link rel="stylesheet" href="css/estilo.css">
     <title>Document</title>
 </head>
 <body>
 <p>GRACIAS POR JUGAR CON NOSOTROS</p>
-<p>god endingO</p>
+<canvas id="lienzo">
+
+</canvas>
+<input type="button" id="comenzar" value="Comenzar" onClick="comenzar()">
+<input type="button" id="detener" value="Detener" onClick="detener()">
 <a href="index.html">VOLVER</a>
 </body>
 </html>
