Diseño final jeugo

--- a/juego.html
+++ b/juego.html
@@ -19,7 +19,7 @@
 
           </nav>
           <!-- As a heading -->
-          <nav class="navbar navbar-light bg-light">
+          <nav class="navbar navbar-dark bg-dark">
             <span class="navbar-brand mb-0 h1"  id="Puntaje"> Puntos: 0</span>
             <a href="final.html" onclick="alert('Terminando el juego')"><span class="badge badge-danger" id="salir">X</span></a></header>
           </nav>
@@ -49,7 +49,6 @@
             <div id="Dropzone" class="drop" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
             </div>
         	<div class="row text-center" id="Animales"></div>
-        
     </div>
     <script>
         
