Local storage imprime

--- a/final.html
+++ b/final.html
@@ -5,10 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="stylefinal.css">
 </head>
 <body>
-<p>GRACIAS POR JUGAR CON NOSOTROS</p>
-<p>ESPERO VOLVER A JUGAR CONTIGO</p>
-<a href="index.html">VOLVER</a>
+<div class="final">
+    <p>GRACIAS POR JUGAR CON NOSOTROS</p>
+    <p>ESPERO VOLVER A JUGAR CONTIGO 
+        <script>
+        var Nnombre = localStorage.getItem("nombre");
+        document.write(Nnombre);
+    </script></p>
+    <img src="/img/bobesponja.gif" alt="">
+    <br><br><br>
+    <a href="index.html">VOLVER</a>
+
+</div>
+
 </body>
 </html>
