--- a/felicidades.html
+++ b/felicidades.html
@@ -16,9 +16,16 @@
    
     <a href="index.html"></a>
     <div class="jumbotron">
-        <h1 class="display-3 text-right">FELICIDADES HAZ TERMINADO</h1>
+        <h1 class="display-3 text-right">FELICIDADES HAZ TERMINADO
+            <script>       
+                var Nnombre = localStorage.getItem("nombre");
+                   document.write(Nnombre);
+                   </script>
+        </h1>
         <hr>
-        <p class="lead text-center">LOGRASTE JUNTAR 10 PUNTOS CONSECUTIVOS</p>
+        <p class="lead text-center">LOGRASTE JUNTAR 10 PUNTOS CONSECUTIVOS
+            
+        </p>
         <p class="lead text-right">
         <a class="btn btn-primary btn-lg" href="index.html" role="button">Volver a jugar</a>
         </p>
