--- a/felicidades.html
+++ b/felicidades.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="css/estilo.css">
     <title>Document</title>
 </head>
-<body style=" background-image: url(/img/fondo1.jpg);
-;">
+
+<body style=" background-image: url(/img/fondo1.jpg);;">
+  
     <nav class="navbar navbar-dark bg-dark">
         <span class="navbar-brand mb-0 h1">ANIMON</span>
     </nav>
@@ -29,10 +30,6 @@
         </p>
         <p class="lead text-center">
         <a class="btn login_btn" href="index.html" role="button">Volver a jugar</a>
-        <canvas id="lienzo"></canvas>
-        <br><div id="botones"> 
-        <input type="button" class="btn login_btn1" id="comenzar" value="Comenzar" onClick="comenzar()">
-        <input type="button" class="btn login_btn1" id="detener" value="Detener" onClick="detener()">
     </p>
     </div>
     
