--- a/final.html
+++ b/final.html
@@ -5,21 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="stylefinal.css">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-<div class="final">
-    <p>GRACIAS POR JUGAR CON NOSOTROS</p>
-    <p>ESPERO VOLVER A JUGAR CONTIGO 
+<div class="final" style="margin-left: 600px;">
+    <p><h1>¡¡GRACIAS POR JUGAR!!</h1></p>
+    <p><h1>ERES LO MAXIMO 
         <script>
-        var Nnombre = localStorage.getItem("nombre");
-        document.write(Nnombre);
-    </script></p>
-    <img src="/img/bobesponja.gif" alt="">
+            var Nnombre = localStorage.getItem("nombre");
+            document.write(Nnombre);
+        </script></p>
+    </h1>
+       
+    <img src="/img/gifFinal.gif"  width="900" height="500" alt="">
     <br><br><br>
     <a href="index.html">VOLVER</a>
 
 </div>
-
 </body>
 </html>
